kubernetes/example/Ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheese
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: stilton.dimeder.pp.ua
    http:
      paths:
      - path: /
        backend:
          serviceName: stilton
          servicePort: http
